testdata/baselines/reference/submodule/conformance/contextualTypedSpecialAssignment.errors.txt
test.js(9,4): error TS2339: Property 'x' does not exist on type '{}'.
test.js(14,4): error TS2339: Property 'x' does not exist on type '{}'.
test.js(16,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(18,4): error TS2339: Property 'x' does not exist on type '{}'.
test.js(33,13): error TS2322: Type 'string' is not assignable to type '"done"'.
test.js(34,15): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(57,17): error TS2339: Property 'x' does not exist on type 'Thing'.
test.js(59,7): error TS7006: Parameter 'n' implicitly has an 'any' type.
test.js(61,17): error TS2339: Property 'x' does not exist on type 'Thing'.


==== test.js (9 errors) ====
    /** @typedef {{
        status: 'done'
        m(n: number): void
    }} DoneStatus */
    
    // property assignment
    var ns = {}
    /** @type {DoneStatus} */
    ns.x = {
       ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
        status: 'done',
        m(n) { }
    }
    
    ns.x = {
       ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
        status: 'done',
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    ns.x
       ~
!!! error TS2339: Property 'x' does not exist on type '{}'.
    
    
    // this-property assignment
    class Thing {
        constructor() {
            /** @type {DoneStatus} */
            this.s = {
                status: 'done',
                m(n) { }
            }
        }
    
        fail() {
            this.s = {
                status: 'done',
                ~~~~~~
!!! error TS2322: Type 'string' is not assignable to type '"done"'.
!!! related TS6500 test.js:2:5: The expected type comes from property 'status' which is declared here on type '{ status: "done"; m: (n: number) => void; }'
                m(n) { }
                  ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
            }
        }
    }
    
    // exports-property assignment
    
    /** @type {DoneStatus} */
    exports.x = {
        status: "done",
        m(n) { }
    }
    exports.x
    
    /** @type {DoneStatus} */
    module.exports.y = {
        status: "done",
        m(n) { }
    }
    module.exports.y
    
    // prototype-property assignment
    /** @type {DoneStatus} */
    Thing.prototype.x = {
                    ~
!!! error TS2339: Property 'x' does not exist on type 'Thing'.
        status: 'done',
        m(n) { }
          ~
!!! error TS7006: Parameter 'n' implicitly has an 'any' type.
    }
    Thing.prototype.x
                    ~
!!! error TS2339: Property 'x' does not exist on type 'Thing'.
    
    // prototype assignment
    function F() {
    }
    /** @type {DoneStatus} */
    F.prototype = {
        status: "done",
        m(n) { }
    }
    
==== mod.js (0 errors) ====
    // module.exports assignment
    /** @type {{ status: 'done', m(n: number): void }} */
    module.exports = {
        status: "done",
        m(n) { }
    }
    